--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,31 @@
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# macOS
-.DS_Store
-.AppleDouble
-.LSOverride
+# Virtual Environment
+venv/
+env/
+ENV/
 
-# Browser files
-*.tmp
-*.temp
-
-# IDE files
+# IDE
 .vscode/
 .idea/
 *.swp
@@ -21,51 +33,24 @@ $RECYCLE.BIN/
 
 # Logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+logs/
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
+# Environment variables
 .env
+.env.local
 
-# Backup files
-*.bak
-*.backup
-*~
+# Service Account Keys (IMPORTANT!)
+service-account-key.json
+*service-account*.json
+
+# Local backups
+local_backups/
+
+# Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
 # Temporary files
-*.url
-*.lnk
-compounding-compliance-log.html.txt
-
-# SECURITY: Authentication secrets and keys
-service-account-key.json
-service-account-key*.json
-*.pem
-*.key
-*.p12
-*.pfx
-.credentials/
-auth/
-secrets/
-
-# Local development backups
-local_backups/
+*.tmp
+*.temp
