--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,27 @@
 {
+    "python.pythonPath": "C:\\pythoncore-3.14-64\\python.exe",
+    "python.defaultInterpreterPath": "C:\\pythoncore-3.14-64\\python.exe",
+    "python.terminal.activateEnvironment": true,
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": false,
+    "python.linting.flake8Enabled": true,
+    "python.formatting.provider": "black",
+    "python.analysis.typeCheckingMode": "basic",
+    "files.associations": {
+        "*.py": "python"
+    },
+    "terminal.integrated.env.windows": {
+        "PYTHON_PATH": "C:\\pythoncore-3.14-64",
+        "PATH": "C:\\pythoncore-3.14-64;C:\\pythoncore-3.14-64\\Scripts;${env:PATH}"
+    },
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestEnabled": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "test_*.py"
+    ],
+    "kiroAgent.configureMCP": "Disabled"
 }
